# path-jump

./: '  .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  release.toml
.githooks/: pre-commit
.github/workflows/: artifacts.yaml  code-quality.yaml  release.yaml  release_packaging.yaml  security-audit.yaml  tagged-release.yaml  test.yaml
crates/bookmarks/: Cargo.toml
crates/bookmarks/src/: main.rs
crates/libs/: Cargo.toml
crates/libs/src/: lib.rs  paths.rs
crates/libs/src/queries/: bookmark.rs  dir.rs
crates/paths/: Cargo.toml
crates/paths/src/: main.rs
resources/: install.sh  j.sh  p  pb
src/: main.rs
src/lib/: errors.rs  mod.rs  paths.rs  queries.rs  types.rs
src/lib/queries/: bookmark.rs  dir.rs  mod.rs
