[package]
name = "pathman_bookmarks"
version = "0.0.44"
edition = "2018"
authors = ["Roee Shapira <ro33.sha@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
structopt = "0.3"
rusqlite = { version = "0.25", features = ["bundled"] }
